--- a/src/DF.Telegram.Web/package.json
+++ b/src/DF.Telegram.Web/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "dependencies": {
     "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~2.2.0-rc.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0"
   }
 }
