--- a/src/DF.Telegram.Web/package.json
+++ b/src/DF.Telegram.Web/package.json
@@ -3,7 +3,8 @@
   "name": "my-app",
   "private": true,
   "dependencies": {
-    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~2.2.0-rc.1"
+    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~2.2.0-rc.1",
+    "@abp/chart.js": "^7.3.2"
   },
   "devDependencies": {
     "eslint": "^8.48.0"
