feat: Set up Vue.js project with webpack configuration
- Add package.json, tsconfig.json, and webpack.config.js files for DF.Telegram.VueApp
- Configure webpack to handle TypeScript, CSS, font, SVG, and Vue files
- Create Vue component `App.vue` that renders a button and updates count when clicked
- Modify `Index.cshtml` to include new script and div with id "app"
- Ignore `yarn.lock` and `dist` directory in Git
- Mount `App` component to element with id `#app` in `main.ts`
- Add necessary dependencies and dev dependencies for Vue.js and webpack

--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,5 @@ src/DF.Telegram.Blazor.Server.Tiered/Logs/*
 /src/DF.Telegram.Web/.config
 /src/DF.Telegram.Web/publish.ps1
 /src/DF.Telegram.Web/Test.ps1
+/src/DF.Telegram.Web/VueApp/yarn.lock
+/src/DF.Telegram.Web/wwwroot/dist
