chore: Update Vue configuration for MediaChart component
- Modified entry points for MediaChart and MediaExternalLink components in webpack.config.js
- Update options for ts-loader in webpack.config.js
- Ignored pnpm-lock.yaml file in DF.Telegram.Web/VueApp directory
- Deleted App.vue and main.ts files in DF.Telegram.Web/VueApp/src directory
- Removed unnecessary code and updated script source path in Index.cshtml
- Deleted shims-vue.d.ts file in DF.Telegram.Web/VueApp/src directory
- Added chart.js as a dependency and vue-tsc as a devDependency in package.json

--- a/.gitignore
+++ b/.gitignore
@@ -276,3 +276,4 @@ src/DF.Telegram.Blazor.Server.Tiered/Logs/*
 /src/DF.Telegram.Web/Test.ps1
 /src/DF.Telegram.Web/VueApp/yarn.lock
 /src/DF.Telegram.Web/wwwroot/dist
+/src/DF.Telegram.Web/VueApp/pnpm-lock.yaml
