--- a/src/DF.Telegram.Web/VueApp/package.json
+++ b/src/DF.Telegram.Web/VueApp/package.json
@@ -7,6 +7,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
     "vue": "^3.2.36"
   },
   "devDependencies": {
@@ -16,6 +17,7 @@
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "vue-loader": "^17.2.2",
+    "vue-tsc": "^1.8.10",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
