--- a/src/DF.Telegram.Web/VueApp/package.json
+++ b/src/DF.Telegram.Web/VueApp/package.json
@@ -4,15 +4,20 @@
   "main": "main.ts",
   "license": "MIT",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "dependencies": {
     "chart.js": "^4.4.0",
+    "element-plus": "^2.3.12",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
     "vue": "^3.2.36"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
