feat: Add dependencies and references to CmsKit module
- Added references and dependencies to the `CmsKit` module in various modules
- Fixed a typo in a namespace declaration in `TelegramApplicationModule.cs`
- Added package references to `Volo.CmsKit.HttpApi.Client` and `Volo.CmsKit.Application`
- Added a new package reference to "@abp/cms-kit" in `package.json`
- Created database migration files and tables for the Telegram module, including indexes and foreign key constraints
- Updated import statements in various files to include the `Volo.CmsKit` and `Volo.Abp.BlobStoring.Database` modules

--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,5 @@ src/DF.Telegram.Blazor.Server.Tiered/Logs/*
 /src/DF.Telegram.Web/.config
 /src/DF.Telegram.Web/publish.ps1
 /src/DF.Telegram.Web/Test.ps1
+/src/DF.Telegram.Web/VueApp/pnpm-lock.yaml
+/src/DF.Telegram.Web/VueApp/待处理问题.md
