--- a/src/DF.Telegram.Application/DF.Telegram.Application.csproj
+++ b/src/DF.Telegram.Application/DF.Telegram.Application.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="7.2.2" />
+    <PackageReference Include="Volo.CmsKit.Application" Version="7.2.2" />
   </ItemGroup>
 
 </Project>
