--- a/src/DF.Telegram.Domain.Shared/DF.Telegram.Domain.Shared.csproj
+++ b/src/DF.Telegram.Domain.Shared/DF.Telegram.Domain.Shared.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="7.2.2" />
@@ -18,6 +19,7 @@
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="7.2.2" />
+    <PackageReference Include="Volo.CmsKit.Domain.Shared" Version="7.2.2" />
   </ItemGroup>
 
   <ItemGroup>
