--- a/src/DF.Telegram.Domain/DF.Telegram.Domain.csproj
+++ b/src/DF.Telegram.Domain/DF.Telegram.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.Emailing" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="7.2.2" />
@@ -23,6 +24,7 @@
     <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.OpenIddict.Domain" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="7.2.2" />
+    <PackageReference Include="Volo.CmsKit.Domain" Version="7.2.2" />
   </ItemGroup>
 
 </Project>
