--- a/src/DF.Telegram.EntityFrameworkCore/DF.Telegram.EntityFrameworkCore.csproj
+++ b/src/DF.Telegram.EntityFrameworkCore/DF.Telegram.EntityFrameworkCore.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring.Database.EntityFrameworkCore" Version="7.2.2" />
+    <PackageReference Include="Volo.CmsKit.EntityFrameworkCore" Version="7.2.2" />
     <ProjectReference Include="..\DF.Telegram.Domain\DF.Telegram.Domain.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.2.2" />
