--- a/src/DF.Telegram.HttpApi/DF.Telegram.HttpApi.csproj
+++ b/src/DF.Telegram.HttpApi/DF.Telegram.HttpApi.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.2.2" />
+    <PackageReference Include="Volo.CmsKit.HttpApi" Version="7.2.2" />
   </ItemGroup>
 
 </Project>
