--- a/src/DF.Telegram.Web/DF.Telegram.Web.csproj
+++ b/src/DF.Telegram.Web/DF.Telegram.Web.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="StarkSoftProxy" Version="1.6.0" />
     <PackageReference Include="Volo.Abp.BlobStoring.FileSystem" Version="7.2.2" />
+    <PackageReference Include="Volo.CmsKit.Web" Version="7.2.2" />
   </ItemGroup>
 
   <ItemGroup>
