--- a/src/DF.Telegram.Domain.Shared/DF.Telegram.Domain.Shared.csproj
+++ b/src/DF.Telegram.Domain.Shared/DF.Telegram.Domain.Shared.csproj
@@ -10,6 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.BackgroundWorkers.Quartz" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="7.2.2" />
     <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="7.2.2" />
