--- a/src/DF.Telegram.DbMigrator/DF.Telegram.DbMigrator.csproj
+++ b/src/DF.Telegram.DbMigrator/DF.Telegram.DbMigrator.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
     <ProjectReference Include="..\DF.Telegram.Application.Contracts\DF.Telegram.Application.Contracts.csproj" />
     <ProjectReference Include="..\DF.Telegram.EntityFrameworkCore\DF.Telegram.EntityFrameworkCore.csproj" />
   </ItemGroup>
