--- a/src/DF.Telegram.Domain.Shared/DF.Telegram.Domain.Shared.csproj
+++ b/src/DF.Telegram.Domain.Shared/DF.Telegram.Domain.Shared.csproj
@@ -1,28 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DF.Telegram</RootNamespace>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageReference Include="System.Text.Json" Version="7.0.3" />
-    <PackageReference Include="Volo.Abp.BackgroundWorkers.Quartz" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="7.2.2" />
-    <PackageReference Include="Volo.CmsKit.Domain.Shared" Version="7.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="System.Text.Json" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.BackgroundWorkers.Quartz" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="8.0.0" />
+    <PackageReference Include="Volo.CmsKit.Domain.Shared" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.0" />
     <PackageReference Include="WTelegramClient" Version="3.5.1" />
   </ItemGroup>
 
