--- a/src/DF.Telegram.HttpApi.Client/DF.Telegram.HttpApi.Client.csproj
+++ b/src/DF.Telegram.HttpApi.Client/DF.Telegram.HttpApi.Client.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DF.Telegram</RootNamespace>
   </PropertyGroup>
@@ -13,13 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="7.2.2" />
-    <PackageReference Include="Volo.CmsKit.HttpApi.Client" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi.Client" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi.Client" Version="8.0.0" />
+    <PackageReference Include="Volo.CmsKit.HttpApi.Client" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
