--- a/src/DF.Telegram.HttpApi/DF.Telegram.HttpApi.csproj
+++ b/src/DF.Telegram.HttpApi/DF.Telegram.HttpApi.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DF.Telegram</RootNamespace>
   </PropertyGroup>
@@ -13,13 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="7.2.2" />
-    <PackageReference Include="Volo.CmsKit.HttpApi" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.CmsKit.HttpApi" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
