--- a/src/DF.Telegram.Web/DF.Telegram.Web.csproj
+++ b/src/DF.Telegram.Web/DF.Telegram.Web.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DF.Telegram.Web</RootNamespace>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
@@ -35,27 +35,27 @@
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="StarkSoftProxy" Version="1.6.0" />
-    <PackageReference Include="Volo.Abp.BlobStoring.FileSystem" Version="7.2.2" />
-    <PackageReference Include="Volo.CmsKit.Web" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.BlobStoring.FileSystem" Version="8.0.0" />
+    <PackageReference Include="Volo.CmsKit.Web" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="2.2.*-*" />
-    <PackageReference Include="Volo.Abp.Imaging.Abstractions" Version="7.3.1" />
-    <PackageReference Include="Volo.Abp.Imaging.ImageSharp" Version="7.3.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="3.0.0" />
+    <PackageReference Include="Volo.Abp.Imaging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Imaging.ImageSharp" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DF.Telegram.Application\DF.Telegram.Application.csproj" />
     <ProjectReference Include="..\DF.Telegram.HttpApi\DF.Telegram.HttpApi.csproj" />
     <ProjectReference Include="..\DF.Telegram.EntityFrameworkCore\DF.Telegram.EntityFrameworkCore.csproj" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Identity.Web" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Web" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Web" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
