--- a/test/DF.Telegram.EntityFrameworkCore.Tests/DF.Telegram.EntityFrameworkCore.Tests.csproj
+++ b/test/DF.Telegram.EntityFrameworkCore.Tests/DF.Telegram.EntityFrameworkCore.Tests.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DF.Telegram</RootNamespace>
   </PropertyGroup>
@@ -11,7 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\DF.Telegram.EntityFrameworkCore\DF.Telegram.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\DF.Telegram.TestBase\DF.Telegram.TestBase.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
