--- a/test/DF.Telegram.HttpApi.Client.ConsoleTestApp/DF.Telegram.HttpApi.Client.ConsoleTestApp.csproj
+++ b/test/DF.Telegram.HttpApi.Client.ConsoleTestApp/DF.Telegram.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
     <ProjectReference Include="..\..\src\DF.Telegram.HttpApi.Client\DF.Telegram.HttpApi.Client.csproj" />
   </ItemGroup>
 
