--- a/test/DF.Telegram.TestBase/DF.Telegram.TestBase.csproj
+++ b/test/DF.Telegram.TestBase/DF.Telegram.TestBase.csproj
@@ -1,17 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DF.Telegram</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.TestBase" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="7.2.2" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="8.0.0" />
     <ProjectReference Include="..\..\src\DF.Telegram.Domain\DF.Telegram.Domain.csproj" />
   </ItemGroup>
 
