--- a/test/DF.Telegram.Web.Tests/DF.Telegram.Web.Tests.csproj
+++ b/test/DF.Telegram.Web.Tests/DF.Telegram.Web.Tests.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
@@ -18,7 +18,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <ProjectReference Include="..\DF.Telegram.Application.Tests\DF.Telegram.Application.Tests.csproj" />
     <ProjectReference Include="..\..\src\DF.Telegram.Web\DF.Telegram.Web.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="7.2.2" />
+    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
