--- a/src/DF.Telegram.Web/VueApp/package.json
+++ b/src/DF.Telegram.Web/VueApp/package.json
@@ -8,10 +8,9 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "chart.js": "^4.4.0",
     "element-plus": "^2.3.12",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.25.2",
     "vue": "^3.2.36"
   },
   "devDependencies": {
@@ -24,6 +23,9 @@
     "vue-loader": "^17.2.2",
     "vue-tsc": "^1.8.10",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.18.1",
+    "unplugin-vue-components": "^0.25.2"
   }
 }
