--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,4 @@ src/DF.Telegram.Blazor.Server.Tiered/Logs/*
 /src/DF.Telegram.Web/VueApp/待处理问题.txt
 /src/DF.Telegram.Web/VueApp/待处理问题.md
 /src/DF.Telegram.Web/publish.sh
+/src/DFApp.Web/Logs/logs.txt
