--- a/src/DFApp.Web/DFApp.Web.csproj
+++ b/src/DFApp.Web/DFApp.Web.csproj
@@ -42,6 +42,7 @@
 		<PackageReference Include="StarkSoftProxy" Version="1.6.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+		<PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="8.0.0" />
 		<PackageReference Include="Volo.Abp.Imaging.Abstractions" Version="8.0.0" />
 		<PackageReference Include="Volo.Abp.Imaging.ImageSharp" Version="8.0.0" />
 		<PackageReference Include="Volo.CmsKit.Web" Version="8.0.0" />
