--- a/src/DFApp.Web/VueApp/package.json
+++ b/src/DFApp.Web/VueApp/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@microsoft/signalr": "^8.0.0",
     "chart.js": "^4.4.0",
     "element-plus": "^2.3.12",
     "vue": "^3.2.36"
@@ -20,12 +21,12 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.18.1",
+    "unplugin-vue-components": "^0.25.2",
     "vue-loader": "^17.2.2",
     "vue-tsc": "^1.8.10",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.18.1",
-    "unplugin-vue-components": "^0.25.2"
+    "webpack-cli": "^5.1.4"
   }
 }
