--- a/src/DFApp.HttpApi/DFApp.HttpApi.csproj
+++ b/src/DFApp.HttpApi/DFApp.HttpApi.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Account.HttpApi" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Imaging.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Imaging.ImageSharp" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="8.0.0" />
     <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="8.0.0" />
