添加上传文件功能，添加账单记录功能。

--- a/src/DFApp.Application.Contracts/DFApp.Application.Contracts.csproj
+++ b/src/DFApp.Application.Contracts/DFApp.Application.Contracts.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Volo.CmsKit.Application.Contracts" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Bookkeeping\Expenditure\Analysis\" />
+  </ItemGroup>
+
 </Project>
