--- a/src/DFApp.Domain.Shared/DFApp.Domain.Shared.csproj
+++ b/src/DFApp.Domain.Shared/DFApp.Domain.Shared.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="StarkSoftProxy" Version="1.6.0" />
 		<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="8.0.0" />
 		<PackageReference Include="Volo.CmsKit.Domain.Shared" Version="8.0.0" />
 		<PackageReference Include="WTelegramClient" Version="3.6.1" />
