--- a/src/DFApp.DbMigrator/DFApp.DbMigrator.csproj
+++ b/src/DFApp.DbMigrator/DFApp.DbMigrator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.1.1" />
     <ProjectReference Include="..\DFApp.Application.Contracts\DFApp.Application.Contracts.csproj" />
     <ProjectReference Include="..\DFApp.EntityFrameworkCore\DFApp.EntityFrameworkCore.csproj" />
   </ItemGroup>
