--- a/src/DFApp.Domain.Shared/DFApp.Domain.Shared.csproj
+++ b/src/DFApp.Domain.Shared/DFApp.Domain.Shared.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\common.props" />
 
@@ -11,19 +11,19 @@
 
 	<ItemGroup>
 		<PackageReference Include="StarkSoftProxy" Version="1.6.0" />
-		<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.CmsKit.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="WTelegramClient" Version="3.6.1" />
+		<PackageReference Include="Volo.Abp.BlobStoring.Database.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.CmsKit.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="WTelegramClient" Version="4.1.1" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="System.Text.Json" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="8.0.0" />
+		<PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.OpenIddict.Domain.Shared" Version="8.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
