--- a/src/DFApp.Web/DFApp.Web.csproj
+++ b/src/DFApp.Web/DFApp.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<Import Project="..\..\common.props" />
 
@@ -55,27 +55,27 @@
 	<ItemGroup>
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-		<PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.Imaging.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.Imaging.ImageSharp" Version="8.0.0" />
-		<PackageReference Include="Volo.CmsKit.Web" Version="8.0.0" />
+		<PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.Imaging.Abstractions" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.Imaging.ImageSharp" Version="8.1.1" />
+		<PackageReference Include="Volo.CmsKit.Web" Version="8.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="3.0.*-*" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="3.0.5" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\DFApp.Application\DFApp.Application.csproj" />
 		<ProjectReference Include="..\DFApp.HttpApi\DFApp.HttpApi.csproj" />
 		<ProjectReference Include="..\DFApp.EntityFrameworkCore\DFApp.EntityFrameworkCore.csproj" />
-		<PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.Swashbuckle" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.Identity.Web" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.TenantManagement.Web" Version="8.0.0" />
-		<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="8.0.0" />
+		<PackageReference Include="Volo.Abp.Autofac" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.Swashbuckle" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.Identity.Web" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Web" Version="8.1.1" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="8.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
