--- a/src/DFApp.Web/package.json
+++ b/src/DFApp.Web/package.json
@@ -3,7 +3,7 @@
   "name": "my-app",
   "private": true,
   "dependencies": {
-    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~3.0.0-rc.1",
-    "@abp/cms-kit": "^7.4.5"
+    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~3.1.1",
+    "@abp/cms-kit": "~8.1.1"
   }
 }
