--- a/test/DFApp.EntityFrameworkCore.Tests/DFApp.EntityFrameworkCore.Tests.csproj
+++ b/test/DFApp.EntityFrameworkCore.Tests/DFApp.EntityFrameworkCore.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -11,7 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\DFApp.EntityFrameworkCore\DFApp.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\DFApp.Application.Tests\DFApp.Application.Tests.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
