--- a/test/DFApp.HttpApi.Client.ConsoleTestApp/DFApp.HttpApi.Client.ConsoleTestApp.csproj
+++ b/test/DFApp.HttpApi.Client.ConsoleTestApp/DFApp.HttpApi.Client.ConsoleTestApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="8.0.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.Http.Client.IdentityModel" Version="8.1.1" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="8.1.1" />
     <ProjectReference Include="..\..\src\DFApp.HttpApi.Client\DFApp.HttpApi.Client.csproj" />
   </ItemGroup>
 
