--- a/test/DFApp.Web.Tests/DFApp.Web.Tests.csproj
+++ b/test/DFApp.Web.Tests/DFApp.Web.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -18,7 +18,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
     <ProjectReference Include="..\DFApp.Application.Tests\DFApp.Application.Tests.csproj" />
     <ProjectReference Include="..\..\src\DFApp.Web\DFApp.Web.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="8.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.TestBase" Version="8.1.1" />
     <ProjectReference Include="..\DFApp.EntityFrameworkCore.Tests\DFApp.EntityFrameworkCore.Tests.csproj" />
   </ItemGroup>
 
