--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,3 +24,9 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: publish
+        path: |
+          publish
