--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,10 +24,13 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v4
+      run: dotnet build -configuration Release --no-restore
+      
+    - name: Publish project
+      run: dotnet publish --configuration Release --no-build --output ./publish
+
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v3
       with:
-        name: publish
-        path: |
-          publish
+        name: dotnet-build-artifacts
+        path: ./publish
