--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
 
 
     steps:
@@ -27,10 +27,10 @@ jobs:
       run: dotnet build --no-restore
       
     - name: Publish project
-      run: dotnet publish --output ./publish
+      run: dotnet publish --output /publish
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v3
       with:
         name: dotnet-build-artifacts
-        path: ./publish
+        path: /publish
