--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,9 +25,14 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+
+    - name: Add repository directory to Git safe directory
+      run: |
+        git config --global --add safe.directory /publish
+      shell: bash
       
     - name: Publish project
-      run: dotnet publish --output /publish
+      run: dotnet publish --configuration Release --framework net8.0 --output /publish
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v3
