--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,16 @@ jobs:
       run: |
         git config --global --add safe.directory ./publish
       shell: bash
+
+    - name: Install dotnet-ef tool
+      run: dotnet tool install --global dotnet-ef
+
+    - name: Generate database using EF
+      run: dotnet ef database update --project ./DFApp/DFApp/src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
+
+    - name: Move generated database folder to ./publish
+      run: |
+        mv ./DFApp/DFApp.db ./publish/DFApp.db
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
