--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,11 +35,11 @@ jobs:
       run: dotnet tool install --global dotnet-ef
 
     - name: Generate database using EF
-      run: dotnet ef database update --project ./DFApp/DFApp/src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
+      run: dotnet ef database update --project ./src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
 
     - name: Move generated database folder to ./publish
       run: |
-        mv ./DFApp/DFApp.db ./publish/DFApp.db
+        mv ./DFApp.db ./publish/DFApp.db
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
