--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,9 +25,20 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v4
+
+    - name: Add repository directory to Git safe directory
+      run: |
+        git config --global --add safe.directory ./publish
+      shell: bash
+
+    - name: Install dotnet-ef tool
+      run: dotnet tool install --global dotnet-ef
+      
+    - name: Publish project
+      run: dotnet publish --configuration Release --framework net8.0 --output ./publish
+
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v3
       with:
-        name: publish
-        path: |
-          publish
+        name: dotnet-build-artifacts
+        path: ./publish
