更新数据库命令以指定项目路径
- 指定数据库更新命令的项目路径
- 确保数据库更新使用正确的项目
- 避免潜在的配置错误
- 提高数据库更新命令的准确性
- 保持发布步骤不变

Generated by DeepSeek

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
       run: dotnet tool install --global dotnet-ef
 
     - name: Update database
-      run: dotnet ef database update --connection "Data Source=./publish/DFApp.db"
+      run: dotnet ef database update --connection "Data Source=./publish/DFApp.db" --project ./src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
