添加发布目录创建步骤
- 在dotnet工作流中添加发布目录创建步骤
- 使用`mkdir -p ./publish`命令创建目录
- 确保数据库更新步骤有正确的目录路径
- 提高工作流的可维护性

Generated by DeepSeek

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Install dotnet-ef tool
       run: dotnet tool install --global dotnet-ef
 
+    - name: Create publish directory
+      run: mkdir -p ./publish
+
     - name: Update database
       run: dotnet ef database update --connection "Data Source=./publish/DFApp.db" --project ./src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
       
