修正数据库更新路径以匹配发布目录
- 更新数据库连接字符串路径
- 确保路径与发布目录一致
- 修复路径中的相对路径问题
- 提高GitHub Actions工作流的稳定性
- 确保数据库更新操作正确执行

Generated by DeepSeek

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,7 +38,7 @@ jobs:
       run: mkdir -p ./publish
 
     - name: Update database
-      run: dotnet ef database update --connection "Data Source=./publish/DFApp.db" --project ./src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
+      run: dotnet ef database update --connection "Data Source=/home/runner/work/DFApp/DFApp/publish/DFApp.db" --project ./src/DFApp.EntityFrameworkCore/DFApp.EntityFrameworkCore.csproj
       
     - name: Publish project
       run: dotnet publish --configuration Release --framework net8.0 --output ./publish
