更新数据库连接字符串路径

--- a/src/DFApp.Web/appsettings.json
+++ b/src/DFApp.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44333"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=C:\\Users\\hws18\\source\\repos\\DFApp\\DFApp.db;"
+    "Default": "Data Source=./DFApp.db;"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "aTppByqV7e0f3pMU"
