添加Abp Cli工具并安装Abp库

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,6 +34,12 @@ jobs:
     - name: Install dotnet-ef tool
       run: dotnet tool install --global dotnet-ef
 
+    - name: Install Abp Cli
+      run: dotnet tool install -g Volo.Abp.Cli
+
+    - name: Install abp libs
+      run: abp install-libs
+
     - name: Create publish directory
       run: mkdir -p ./publish
 
