更新连接字符串以包含数据源路径
- 修改DbMigrator的appsettings.json
- 修改DFApp.Web的appsettings.json
- 使用jq工具更新连接字符串
- 确保路径包含"Data Source"前缀
- 使用临时文件进行更新

Generated by DeepSeek

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,13 +45,13 @@ jobs:
 
     - name: Modify appsettings.json for DbMigrator
       run: |
-        jq '.ConnectionStrings.Default = "/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.DbMigrator/appsettings.json > ./src/DFApp.DbMigrator/appsettings.tmp.json
+        jq '.ConnectionStrings.Default = "Data Source=/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.DbMigrator/appsettings.json > ./src/DFApp.DbMigrator/appsettings.tmp.json
         mv ./src/DFApp.DbMigrator/appsettings.tmp.json ./src/DFApp.DbMigrator/appsettings.json
       shell: bash
     
     - name: Modify appsettings.json for DFApp.Web
       run: |
-        jq '.ConnectionStrings.Default = "/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.Web/appsettings.json > ./src/DFApp.Web/appsettings.tmp.json
+        jq '.ConnectionStrings.Default = "Data Source=/home/runner/work/DFApp/DFApp/publish/DFApp.db"' ./src/DFApp.Web/appsettings.json > ./src/DFApp.Web/appsettings.tmp.json
         mv ./src/DFApp.Web/appsettings.tmp.json ./src/DFApp.Web/appsettings.json
       shell: bash
 
