重构媒体信息服务和后台任务处理逻辑
- 移除过时的方法和属性
- 优化文件下载和存储逻辑
- 更新数据库模型和迁移文件
- 改进哈希计算和文件上传控制器
- 更新前端页面和数据表配置

Generated by DeepSeek

--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,4 @@ src/DF.Telegram.Blazor.Server.Tiered/Logs/*
 src/DFApp.Web/DFApp.db
 src/DFApp.Web/DFApp.db-shm
 src/DFApp.Web/DFApp.db-wal
+.prompts/translate.prompt
