重构后台服务和数据库迁移配置
- 移除DFAppBackgroundWorkerBase类
- 更新Aria2BackgroundWorker和ListenTelegramService
- 修改.gitignore文件
- 更新DFApp.Application.Contracts项目配置
- 添加新的配置信息到ConfigurationInfoDataSeederContributor

Generated by DeepSeek

--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,4 @@ src/DFApp.Web/DFApp.db
 src/DFApp.Web/DFApp.db-shm
 src/DFApp.Web/DFApp.db-wal
 .prompts/translate.prompt
+src/DFApp.DbMigrator/appsettings.json
