更新.gitignore、ExternalLinkService、ConfigurationInfoDataSeederContributor、DFApp.EntityFrameworkCore.csproj、DFAppDbContextFactory、DFAppEntityFrameworkCoreModule
- 更新.gitignore以忽略特定目录
- 修改ExternalLinkService的媒体信息过滤逻辑
- 在ConfigurationInfoDataSeederContributor中添加新配置
- 更新DFApp.EntityFrameworkCore.csproj以包含Migrations目录
- 在DFAppDbContextFactory和DFAppEntityFrameworkCoreModule中添加条件编译

Generated by DeepSeek

--- a/.gitignore
+++ b/.gitignore
@@ -287,4 +287,5 @@ src/DFApp.Web/DFApp.db
 src/DFApp.Web/DFApp.db-shm
 src/DFApp.Web/DFApp.db-wal
 .prompts/translate.prompt
-src/DFApp.DbMigrator/appsettings.json
+/src/DFApp.Web/Photo/
+/src/DFApp.Web/Video/
