移除MediaInfo表中的MD5列并添加IsDownloadCompleted列
- 移除MediaInfo表中的CreatorId列
- 移除MediaInfo表中的ExtraProperties列
- 移除MediaInfo表中的LastModifierId列
- 移除MediaInfo表中的MD5列
- 添加MediaInfo表中的IsDownloadCompleted列

Generated by DeepSeek

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,7 +60,7 @@ jobs:
     - name: Publish project
       run: |
         cd ./src/DFApp.Web/
-        dotnet publish --configuration Release --framework net8.0 --output ./publish
+        dotnet publish --configuration Release --framework net8.0 --output ../../publish
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v3
