feat(gitignore): 忽略整个.vscode目录

--- a/.gitignore
+++ b/.gitignore
@@ -289,5 +289,5 @@ src/DFApp.Web/DFApp.db-wal
 .prompts/translate.prompt
 /src/DFApp.Web/Photo/
 /src/DFApp.Web/Video/
-.vscode/settings.json
+.vscode/
 /.continue/
