fix: 更新数据库连接字符串，修正路径为Linux格式

--- a/src/DFApp.DbMigrator/appsettings.json
+++ b/src/DFApp.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=C:\\Users\\hws18\\source\\repos\\DFApp\\DFApp.db;"
+    "Default": "Data Source=/home/df/dfapp/DFApp/DFApp.db"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
