--- a/src/DFApp.Application/DFApp.Application.csproj
+++ b/src/DFApp.Application/DFApp.Application.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <RootNamespace>DFApp</RootNamespace>
   </PropertyGroup>
@@ -14,13 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application" Version="9.3.6" />
-    <PackageReference Include="Volo.Abp.BackgroundWorkers.Quartz" Version="9.3.6" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="9.3.6" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="9.3.6" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="9.3.6" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="9.3.6" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="9.3.6" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.BackgroundWorkers.Quartz" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="10.0.1" />
+    <PackageReference Include="Volo.Abp.Mapperly" Version="10.0.1" />
     <PackageReference Include="BencodeNET" Version="3.0.0" />
   </ItemGroup>
 
