--- a/src/DFApp.Web/DFApp.Web.csproj
+++ b/src/DFApp.Web/DFApp.Web.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\..\common.props" />
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<RootNamespace>DFApp.Web</RootNamespace>
 		<AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
@@ -53,7 +53,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
@@ -62,20 +62,21 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="4.3.6" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="5.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\DFApp.Application\DFApp.Application.csproj" />
 		<ProjectReference Include="..\DFApp.HttpApi\DFApp.HttpApi.csproj" />
 		<ProjectReference Include="..\DFApp.EntityFrameworkCore\DFApp.EntityFrameworkCore.csproj" />
-		<PackageReference Include="Volo.Abp.Autofac" Version="9.3.6" />
-		<PackageReference Include="Volo.Abp.Swashbuckle" Version="9.3.6" />
-		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="9.3.6" />
-		<PackageReference Include="Volo.Abp.Identity.Web" Version="9.3.6" />
-		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="9.3.6" />
-		<PackageReference Include="Volo.Abp.TenantManagement.Web" Version="9.3.6" />
-		<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="9.3.6" />
+		<PackageReference Include="Volo.Abp.Autofac" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.Swashbuckle" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.Identity.Web" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Web" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="10.0.1" />
+		<PackageReference Include="Volo.Abp.Mapperly" Version="10.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
