--- a/src/DFApp.Web/package.json
+++ b/src/DFApp.Web/package.json
@@ -3,7 +3,6 @@
   "name": "my-app",
   "private": true,
   "dependencies": {
-    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~4.3.6",
-    "@abp/cms-kit": "~9.3.6"
+    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~5.0.1"
   }
 }
